# pulumi-aws

./: .ci-mgmt.yaml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .mise.toml  .travis.yml  .upgrade-config.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_OLD.md  CHANGELOG_PENDING.md  CI_IMPROVEMENTS.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Gometalinter.json  Gopkg.template.toml  Gopkg.toml  Makefile  Makefile.github  README.md  TESTING.md  apm.lock.yaml  apm.yml  devbox.json  errors.145842.md  function.ts  go.mod  go.sum  migration-guide.md  mise.toml  output.txt  plan.md  profile.org  providers_aws.go  pulumi-aws.sln  renovate.json5  (+3 more)
sdk/python/: .gitignore  Pulumi.yaml  README.md  VERSION  constraints.txt  go.mod  pyproject.toml  setup.py
sdk/python/pulumi_aws/: README.md  __init__.py  _enums.py  _inputs.py  _tables.py  _utilities.py  arn_build.py  arn_parse.py  extra_imports.py  get_ami.py  get_ami_ids.py  get_arn.py  get_autoscaling_groups.py  get_availability_zone.py  get_availability_zones.py  get_billing_service_account.py  get_caller_identity.py  get_canonical_user_id.py  get_default_tags.py  get_elastic_ip.py  get_ip_ranges.py  get_partition.py  get_prefix_list.py  get_region.py  get_regions.py  get_service.py  get_service_principal.py  outputs.py  provider.py  pulumi-plugin.json  tables.py  trim_iam_role_path.py  user_agent.py  utilities.py
sdk/python/pulumi_aws/accessanalyzer/: __init__.py  _inputs.py  analyzer.py  archive_rule.py  outputs.py
sdk/python/pulumi_aws/account/: __init__.py  get_regions.py  (+5 more)
(+163291 files in other folders)
