[project]
  name = "pulumi_aws"
  description = "A Pulumi package for creating and managing Amazon Web Services (AWS) cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "aws"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-aws"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_aws = ["py.typed", "pulumi-plugin.json"]
